--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -171,9 +171,8 @@ button:focus
 	.modal-dialog
 		&.modal-full
 			max-width: rem(1000)
-		.modal-content
+		.adds-modal-content
 			background-color: #FFFFFF
-			padding: rem(30)
 			.container-fluid
 				.row
 					.m-tab-img
@@ -192,8 +191,10 @@ button:focus
 								margin-right: rem(15)
 					.m-text
 						.close
-							top: rem(-25)
-							right: rem(-25)
+							display: block
+							top: initial
+							right: 0
+							bottom: rem(-15)
 						.title
 							font-family: $h-font
 							font-size: rem(24)
@@ -235,6 +236,8 @@ button:focus
 								margin-right: rem(25)
 						.m-adds-form
 							display: flex
+							flex-direction: column
+							margin-bottom: rem(10)
 							width: 100%
 							.form-item
 								width: 100%
@@ -268,7 +271,7 @@ header
 		width: 100%
 		background-color: #fff
 		box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1)
-		z-index: 10000
+		z-index: 1000
 		.navbar-desctop
 			display: none
 			max-height: rem(60)
@@ -1017,6 +1020,7 @@ header
 										border: 1px solid $grey
 										border-radius: 5px
 										margin-right: rem(10)
+										width: 100%
 										&.active
 											display: block
 										img
@@ -1103,26 +1107,29 @@ header
 											background-color: $orange
 											color: #FFFFFF
 				.cat-complect
-					border-left: 2px solid #D8D8D8
-					padding-left: rem(25)
 					.title
 						font-family: $h-font
 						font-size: rem(25)
 						font-weight: bold
 					ul
+						display: flex
+						flex-wrap: wrap
 						li
 							display: flex
-							margin-bottom: rem(45)
+							flex-direction: column
+							margin-bottom: rem(30)
 							align-items: center
+							width: 50%
 							img
 								width: rem(48)
-								margin-right: rem(30)
+								margin-bottom: rem(10)
 							p
 								margin: 0
 								font-family: $h-font
 								font-weight: bold
-								font-size: rem(18)
-								line-height: rem(22)
+								font-size: rem(14)
+								line-height: rem(18)
+								text-align: center
 
 // Catalog End
 
@@ -1130,37 +1137,40 @@ header
 
 .book
 	background-color: #EEFAFF
-	padding-top: rem(60)
+	padding-top: rem(20)
 	.container
 		.row
 			.book-form-box
-				padding-bottom: rem(105)
+				padding-bottom: rem(30)
 				.h2
-					margin-bottom: rem(11)
+					margin-bottom: rem(10)
+					text-align: center
 				.book-title
-					font-size: rem(24)
+					font-size: rem(14)
+					line-height: rem(18)
+					margin-bottom: rem(20)
 					font-weight: 500
-					line-height: rem(28)
-					margin-bottom: rem(30)
+					text-align: center
 				.book-form
 					max-width: rem(360)
-					padding: rem(30) rem(20)
+					padding: rem(20) rem(15)
 					border-radius: 5px
 					background-color: #FFFFFF
 					box-shadow: 0 0 rem(48) 0 rgba(0,0,0,0.3)
+					margin: 0 auto
 					.book-form-title
 						font-size: rem(18)
 						font-weight: bold
 						line-height: rem(26)
 						text-align: center
-						margin-bottom: rem(30)
+						margin-bottom: rem(20)
 					.book-form-group
 						display: flex
 						flex-direction: column
 						margin-bottom: rem(10)
 						.b-form-item
 							width: 100%
-							margin-bottom: rem(20)
+							margin-bottom: rem(15)
 							height: rem(44)
 							border: 1px solid $grey
 							color: $grey
@@ -1172,7 +1182,7 @@ header
 						line-height: rem(17)
 						color: $grey
 			.book-book
-				display: flex
+				display: none
 				align-items: flex-end
 
 // Book End
@@ -1249,18 +1259,18 @@ header
 										align-self: flex-end
 									.three
 										align-self: flex-end
-					.carousel-indicators
-						position: initial
-						li
-							position: relative
-							width: rem(40)
-							height: rem(9)
-							margin: 0 rem(3)
-							background-color: #fff
-							border: 1px solid $accent
-							border-radius: 5px
-							&.active
-								background-color: $accent
+					// .carousel-indicators
+					// 	position: initial
+					// 	li
+					// 		position: relative
+					// 		width: rem(40)
+					// 		height: rem(9)
+					// 		margin: 0 rem(3)
+					// 		background-color: #fff
+					// 		border: 1px solid $accent
+					// 		border-radius: 5px
+					// 		&.active
+					// 			background-color: $accent
 				&.active
 					display: block
 // Galery End
@@ -1268,33 +1278,38 @@ header
 // Review Start
 
 .review
-	padding: rem(60) 0
+	padding-top: rem(20)
+	padding-bottom: rem(20)
 	.container
 		.row
 			.h2
 				text-align: center
-				margin-bottom: rem(30)
+				margin-bottom: rem(10)
+				width: 100%
 			.carousel
 				.carousel-inner
-					margin-bottom: rem(30)
+					margin-bottom: rem(10)
 					.carousel-item
+						width: 100%
 						.row
 							.rev-video
 								flex: 0 0 auto
 								.rev-video-container
 									position: relative
+									min-width: rem(320)
+									padding: 15px
 									.rev-video-caption
-										position: absolute
+										// position: absolute
 										width: 100%
 										bottom: 0
 										padding: rem(10)
-										background-color: rgba(255,255,255,.7)
+										background-color: rgba(0,0,0,.2)
 										.caption-t
 											font-size: rem(14)
 											line-height: rem(16)
 											margin: 0
 							.rev-photo
-								display: flex
+								display: none
 								width: 100%
 								border-radius: 5px
 								background-color: #FFFFFF
@@ -1388,51 +1403,57 @@ header
 				margin-bottom: rem(5)
 			.title
 				font-family: $h-font
-				font-size: rem(36)
-				line-height: rem(42)
+				font-size: rem(18)
+				line-height: rem(24)
 				font-weight: bold
 				width: 100%
 				color: $accent
 				text-align: center
-				margin-bottom: rem(40)
-			.adds-line
-				display: flex
-				justify-content: space-between
-				width: 100%
-				margin-bottom: rem(30)
-				.adds-box
-					border-radius: 5px
-					background-color: #FFFFFF
-					box-shadow: 0 0 rem(20) 0 rgba(0,0,0,0.2)
-					max-width: rem(270)
-					padding: rem(15)
-					.adds-img
-						width: rem(200)
-						margin: 0 auto
-						margin-bottom: rem(20)
-					.adds-name
-						font-family: $h-font
-						font-weight: bold
-						font-size: rem(14)
-						line-height: rem(14)
-						margin-bottom: rem(10)
-					.adds-text
-						font-size: rem(14)
-						line-height: rem(18)
-						margin-bottom: rem(10)
-					.adds-prise
-						.price
-							font-family: $h-font
-							font-size: rem(28)
-							font-weight: 500
-							color: $accent
-							text-align: center
-							margin-bottom: rem(15)
-							span
+				margin-bottom: rem(15)
+			.carousel-inner
+				.carousel-item
+					.carusel-box
+						display: flex
+						justify-content: space-around
+						align-items: center
+						max-width: 100%
+						flex-direction: column
+						.adds-box
+							border-radius: 5px
+							background-color: #FFFFFF
+							box-shadow: 0 0 rem(15) 0 rgba(0,0,0,0.2)
+							max-width: rem(270)
+							padding: rem(15)
+							margin-bottom: rem(30)
+							.adds-img
+								width: rem(200)
+								margin: 0 auto
+								margin-bottom: rem(20)
+							.adds-name
+								font-family: $h-font
+								font-weight: bold
 								font-size: rem(14)
-								color: $grey
-					.adds-btn
-						height: rem(40)
+								line-height: rem(14)
+								margin-bottom: rem(10)
+							.adds-text
+								font-size: rem(14)
+								line-height: rem(18)
+								margin-bottom: rem(10)
+							.adds-prise
+								.price
+									font-family: $h-font
+									font-size: rem(28)
+									font-weight: 500
+									color: $accent
+									text-align: center
+									margin-bottom: rem(15)
+									span
+										font-size: rem(14)
+										color: $grey
+							.adds-btn
+								height: rem(40)
+			.carousel-indicators
+				width: 100%
 
 // Adds End
 
@@ -1607,13 +1628,13 @@ header
 .catalog
 	// display: none
 .book
-	display: none
+	// display: none
 .gallery
 	display: none
 .review
-	display: none
+	// display: none
 .adds
-	display: none
+	// display: none
 .about
 	display: none
 .faq
