--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -1467,6 +1467,7 @@ header
 			.h2
 				text-align: center
 				margin-bottom: rem(20)
+				width: 100%
 			.about-step
 				.about-img
 					width: 100%
@@ -1636,10 +1637,10 @@ header
 .adds
 	// display: none
 .about
-	display: none
+	// display: none
 .faq
-	display: none
+	// display: none
 .footer
-	display: none
+	// display: none
 
 @import "media" // Always at the end
