--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -60,6 +60,11 @@ button:focus
 	transition: .7s
 	cursor: pointer
 
+.btn-disable
+	background-color: $grey!important
+	&:hover
+		cursor: default!important
+		box-shadow: none!important
 
 .btn-orange
 	background-color: $orange
@@ -318,7 +323,7 @@ header
 						text-decoration: none
 						background-color: darken($orange, 10%)
 				.header-phones
-					margin-right: rem(-15)
+					// margin-left: rem(-25)
 					font-size: rem(14)
 					font-weight: 500
 					p
